deployment/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asl-api
spec:
  selector:
    app.kubernetes.io/name: asl-api
  ports:
    - name: http
      port: 80
      targetPort: http
